# digitaltwin

./: MIGRATION.md  docker-compose.yml
backend/: Cargo.toml  clippy.toml  deny.toml  rust-toolchain.toml
backend/crates/achievement-application/: Cargo.toml
backend/crates/achievement-application/src/: lib.rs
backend/crates/achievement-contracts/: Cargo.toml  build.rs
backend/crates/achievement-contracts/src/: lib.rs
backend/crates/achievement-domain/: Cargo.toml
backend/crates/achievement-domain/src/: lib.rs
backend/crates/achievement-infrastructure/: Cargo.toml
backend/crates/achievement-infrastructure/src/: lib.rs
backend/crates/achievement-presentation/: Cargo.toml
backend/crates/achievement-presentation/src/: lib.rs
backend/crates/audit/: Cargo.toml
backend/crates/audit/src/: lib.rs
backend/crates/avatar-application/: Cargo.toml
backend/crates/avatar-application/src/: lib.rs
backend/crates/avatar-contracts/: Cargo.toml  build.rs
backend/crates/avatar-contracts/src/: lib.rs
backend/crates/avatar-domain/: Cargo.toml
backend/crates/avatar-domain/src/: lib.rs
backend/crates/avatar-infrastructure/: Cargo.toml
backend/crates/avatar-infrastructure/src/: lib.rs
backend/crates/avatar-presentation/: Cargo.toml
backend/crates/community-application/: Cargo.toml
backend/crates/community-contracts/: Cargo.toml  build.rs
backend/crates/community-domain/: Cargo.toml
backend/crates/community-infrastructure/: Cargo.toml
backend/crates/community-presentation/: Cargo.toml
backend/crates/conversation-application/: Cargo.toml
backend/crates/conversation-contracts/: Cargo.toml  build.rs
backend/crates/conversation-domain/: Cargo.toml
backend/crates/conversation-infrastructure/: Cargo.toml
backend/crates/conversation-presentation/: Cargo.toml
backend/crates/creative-application/: Cargo.toml
backend/crates/creative-contracts/: Cargo.toml  build.rs
backend/crates/creative-domain/: Cargo.toml
backend/crates/creative-infrastructure/: Cargo.toml
backend/crates/creative-presentation/: Cargo.toml
backend/crates/emotion-application/: Cargo.toml
backend/crates/emotion-contracts/: Cargo.toml  build.rs
backend/crates/emotion-domain/: Cargo.toml
backend/crates/emotion-infrastructure/: Cargo.toml
backend/crates/emotion-presentation/: Cargo.toml
backend/crates/family-application/: Cargo.toml
backend/crates/family-contracts/: Cargo.toml  build.rs
backend/crates/family-domain/: Cargo.toml
backend/crates/family-infrastructure/: Cargo.toml
backend/crates/family-presentation/: Cargo.toml
backend/crates/firestore-client/: Cargo.toml
backend/crates/identity-application/: Cargo.toml
backend/crates/identity-contracts/: Cargo.toml  build.rs
backend/crates/identity-domain/: Cargo.toml
backend/crates/identity-infrastructure/: Cargo.toml
backend/crates/identity-integration-tests/: Cargo.toml
backend/crates/identity-presentation/: Cargo.toml
backend/crates/kernel/: Cargo.toml
backend/crates/learning-application/: Cargo.toml
backend/crates/learning-contracts/: Cargo.toml  build.rs
backend/crates/learning-domain/: Cargo.toml
backend/crates/learning-infrastructure/: Cargo.toml
backend/crates/learning-presentation/: Cargo.toml
backend/crates/memory-application/: Cargo.toml
backend/crates/memory-contracts/: Cargo.toml  build.rs
backend/crates/memory-domain/: Cargo.toml
backend/crates/memory-infrastructure/: Cargo.toml
backend/crates/memory-presentation/: Cargo.toml
backend/crates/moderation-application/: Cargo.toml
backend/crates/moderation-contracts/: Cargo.toml  build.rs
backend/crates/moderation-domain/: Cargo.toml
backend/crates/moderation-infrastructure/: Cargo.toml
backend/crates/moderation-presentation/: Cargo.toml
backend/crates/notification-application/: Cargo.toml
backend/crates/notification-contracts/: Cargo.toml  build.rs
backend/crates/notification-domain/: Cargo.toml
backend/crates/notification-infrastructure/: Cargo.toml
backend/crates/notification-presentation/: Cargo.toml
backend/crates/telemetry/: Cargo.toml
backend/crates/therapy-application/: Cargo.toml
backend/crates/therapy-contracts/: Cargo.toml  build.rs
backend/crates/therapy-domain/: Cargo.toml
backend/crates/therapy-infrastructure/: Cargo.toml
backend/crates/therapy-presentation/: Cargo.toml
backend/crates/voice-application/: Cargo.toml
backend/crates/voice-contracts/: Cargo.toml  build.rs
backend/crates/voice-domain/: Cargo.toml
backend/crates/voice-infrastructure/: Cargo.toml
backend/crates/voice-presentation/: Cargo.toml
backend/migrations/achievement/: 20260420_0001__init.sql
backend/migrations/audit/: 20260418_0001__init.sql
backend/migrations/avatar/: 20260420_0001__init.sql
backend/migrations/community/: 20260420_0001__init.sql
backend/migrations/conversation/: 20260419_0001__init.sql
backend/migrations/creative/: 20260420_0001__init.sql
backend/migrations/emotion/: 20260420_0001__init.sql
backend/migrations/family/: 20260420_0001__init.sql
backend/migrations/identity/: 20260418_0001__init.sql
backend/migrations/learning/: 20260420_0001__init.sql
backend/migrations/moderation/: 20260420_0001__init.sql
backend/migrations/notification/: 20260420_0001__init.sql
backend/migrations/therapy/: 20260420_0001__init.sql
backend/migrations/voice/: 20260420_0001__init.sql
backend/services/achievement-service/: Cargo.toml
backend/services/avatar-service/: Cargo.toml
backend/services/community-service/: Cargo.toml
backend/services/conversation-service/: Cargo.toml  Dockerfile
backend/services/creative-service/: Cargo.toml
backend/services/emotion-service/: Cargo.toml
backend/services/family-service/: Cargo.toml
backend/services/identity-service/: Cargo.toml  Dockerfile
backend/services/learning-service/: Cargo.toml
backend/services/memory-service/: Cargo.toml
backend/services/moderation-service/: Cargo.toml
backend/services/notification-service/: Cargo.toml
backend/services/therapy-service/: Cargo.toml
backend/services/voice-service/: Cargo.toml
(+265 files in other folders)
