[package]
name = "community-presentation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
kernel = { workspace = true }
audit = { workspace = true }
community-application = { workspace = true }
community-domain = { workspace = true }
community-contracts = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
prost-types = "0.13"
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
