[package]
name = "firestore-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Layer: infrastructure (shared). Thin wrapper over the Firestore REST API.
# Auth via Workload Identity on Cloud Run (metadata server) or
# GOOGLE_APPLICATION_CREDENTIALS locally.
[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
