[package]
name = "identity-contracts"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Layer: shared contracts. Generated types only — no logic.
[dependencies]
prost = { workspace = true }
prost-types = "0.13"
tonic = { workspace = true }
serde = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
