[package]
name = "identity-infrastructure"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Layer: infrastructure. Implements ports declared in identity-domain.
# Allowed: DB driver, crypto, HTTP clients, external SDKs.
[dependencies]
kernel = { workspace = true }
identity-domain = { workspace = true }
identity-application = { workspace = true }
audit = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
