[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Layer: shared domain primitives. No adapter/runtime deps.
[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
