[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

# Layer: infrastructure (cross-cutting observability, §6).
[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
