[package]
name = "achievement-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "achievement-service"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
audit = { workspace = true }
telemetry = { workspace = true }
achievement-application = { workspace = true }
achievement-contracts = { workspace = true }
achievement-domain = { workspace = true }
achievement-infrastructure = { workspace = true }
achievement-presentation = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
