[package]
name = "emotion-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "emotion-service"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
audit = { workspace = true }
telemetry = { workspace = true }
emotion-application = { workspace = true }
emotion-contracts = { workspace = true }
emotion-domain = { workspace = true }
emotion-infrastructure = { workspace = true }
emotion-presentation = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
