[package]
name = "emotion-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "emotion-service"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
audit = { workspace = true }
telemetry = { workspace = true }
emotion-application = { workspace = true }
emotion-contracts = { workspace = true }
emotion-domain = { workspace = true }
emotion-infrastructure = { workspace = true }
emotion-presentation = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
tonic = { workspace = true }
tonic-web = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
