[package]
name = "family-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "family-service"
path = "src/main.rs"

[dependencies]
kernel = { workspace = true }
audit = { workspace = true }
telemetry = { workspace = true }
family-application = { workspace = true }
family-contracts = { workspace = true }
family-domain = { workspace = true }
family-infrastructure = { workspace = true }
family-presentation = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
figment = { workspace = true }
async-trait = { workspace = true }
